<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MostrarDatos">

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_nombre"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="27dp" />

    <EditText
        android:id="@+id/txtDni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_dni"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="26dp" />

    <EditText
        android:id="@+id/txtFechaNac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_fechaNac"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="59dp" />

    <Button
        android:id="@+id/btnGuarda"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:text="@string/btnGuarda" />
</LinearLayout>