<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VisualizarActivity">
    <TextView
        android:id="@+id/viewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_nombre"/>

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@id/viewNombre"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="27dp" />

    <TextView
        android:id="@+id/viewDNI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_dni"/>
    <EditText
        android:id="@+id/txtDni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@id/viewDNI"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="26dp" />

    <TextView
        android:id="@+id/viewFechaNac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_fechaNac"/>
    <EditText
        android:id="@+id/txtFechaNac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@id/viewFechaNac"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="59dp" />
    <TextView
        android:id="@+id/viewEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_edad"/>

    <EditText
        android:id="@+id/txtEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@id/viewEdad"
        android:inputType="textPersonName"
        android:textSize="24sp" />
    <Button
        android:id="@+id/btnGuarda"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:text="@string/btnGuarda" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        app:srcCompat="@drawable/edit" />
</LinearLayout>